--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello Git</h1>
-    <h2>Git круче всех</h2>
+    <h2>Git круче всех.</h2>
 </body>
 <script src="script.js"></script>
 </html>
